--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "neighborhood-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://quiwah.github.com/React-Vashon-Venues/",
+  "homepage": "https://quiwah.github.com/React-Vashon-Venues",
   "dependencies": {
     "axios": "^0.18.0",
     "classnames": "^2.2.6",
